fix: [CCM-7228]: Fix Multi Container Recommendations breaking when cards are collapsed (#8236)
* fix: [CCM-7228]: Fix Multi Container Recommendations breaking when cards are collapsed

* fix: [CCM-7228]: Add tests

* fix: [CCM-7228]: fixes

--- a/src/modules/75-ce/components/RecommendationDetails/RecommendationDetails.module.scss
+++ b/src/modules/75-ce/components/RecommendationDetails/RecommendationDetails.module.scss
@@ -163,3 +163,7 @@
     cursor: pointer;
   }
 }
+
+.containerHidden {
+  display: none;
+}
